--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "16.11.0",
+    "react-bootstrap": "1.3.0",
     "react-dom": "16.11.0",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
