--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "4.5.1",
+    "antd": "4.5.2",
     "prop-types": "15.7.2",
     "react": "16.11.0",
-    "react-bootstrap": "1.3.0",
     "react-dom": "16.11.0",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
