--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "smart-contract"
   ],
   "author": "Grupo 1",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/tomasBustamante/crypto-tienda/issues"
   },
   "homepage": "https://github.com/tomasBustamante/crypto-tienda#readme",
   "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1"
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1"
   }
 }
